--- a/week4/discover.html
+++ b/week4/discover.html
@@ -65,7 +65,7 @@
             </div>
             <div class="discover-pic-1">
                 <picture>
-                    <img class= "discover-pics" data-src="images/midlo-map.png" alt="Map of Midlothian">
+                    <img class= "discover-pics" src="images/placeholder.jpg" data-src="images/midlo-map.png" alt="Map of Midlothian">
                 </picture>
             </div>
             <div class="info-2">
@@ -79,7 +79,7 @@
             </div>
             <div class="discover-pic-2">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-oldmine.jpg" alt="Old Midlothian mine">
+                    <img class="discover-pics" src="images/placeholder.jpg" data-src="images/discover-oldmine.jpg" alt="Old Midlothian mine">
                 </picture>
             </div>
             <div class="info-3">
@@ -91,7 +91,7 @@
             </div>
             <div class="discover-pic-3">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-scene.jpg" alt="Midlothian scenery">
+                    <img class="discover-pics" src="images/placeholder.jpg" data-src="images/discover-scene.jpg" alt="Midlothian scenery">
                 </picture>
             </div>
             <div class="info-4">
@@ -109,7 +109,7 @@
             </div>
             <div class="discover-pic-4">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-golf.jpg" alt="Windy Hill golf course">
+                    <img class="discover-pics" src="images/placeholder.jpg" data-src="images/discover-golf.jpg" alt="Windy Hill golf course">
                 </picture>
             </div>
             <div class="info-5">
@@ -124,28 +124,28 @@
             </div>
             <div class="discover-pic-5">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-mill.jpg" alt="Midlothian mill">
+                    <img class="discover-pics" src="images/placeholder.jpg" data-src="images/discover-mill.jpg" alt="Midlothian mill">
                 </picture>
             </div>
 
             <div class="discover-pic-6">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-mine.jpg" alt="Midlothian mine">
+                    <img class="discover-pics" src="images/placeholder.jpg" data-src="images/discover-mine.jpg" alt="Midlothian mine">
                 </picture>
             </div>
             <div class="discover-pic-7">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-midlohs.jpg" alt="Midlothian high school">
+                    <img class="discover-pics" src="images/placeholder.jpg" data-src="images/discover-midlohs.jpg" alt="Midlothian high school">
                 </picture>
             </div>
             <div class="discover-pic-8">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-library.jpg"alt="Midlothian library">
+                    <img class="discover-pics" src="images/placeholder.jpg" data-src="images/discover-library.jpg" alt="Midlothian library">
                 </picture>
             </div>
             <div class="discover-pic-9">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-cinema.jpg"alt="midlothian movie theater">
+                    <img class="discover-pics" src="images/placeholder.jpg" data-src="images/discover-cinema.jpg" alt="midlothian movie theater">
                 </picture>
             </div>
 
@@ -168,8 +168,8 @@
         <section class="footings2">
             <p id="name">barnum.eleanor@gmail.com</p>
             <p id="number">(804)239-8531</p>
-            <a id="linko" href="https://www.google.com/">Location Map</a>
-            <a id="linko" href="./contact.html">Contact Us!</a>
+            <a class="linko" href="https://www.google.com/">Location Map</a>
+            <a class="linko" href="./contact.html">Contact Us!</a>
         </section>
         <hr id="footer-line">
         <section id="last">
