--- a/week4/directory.html
+++ b/week4/directory.html
@@ -77,8 +77,8 @@
         <section class="footings2">
             <p id="name">barnum.eleanor@gmail.com</p>
             <p id="number">(804)239-8531</p>
-            <a id="linko" href="https://www.google.com/">Location Map</a>
-            <a id="linko" href="./contact.html">Contact Us!</a>
+            <a class="linko" href="https://www.google.com/">Location Map</a>
+            <a class="linko" href="./contact.html">Contact Us!</a>
         </section>
         <hr id="footer-line">
         <section id="last">
