--- a/week4/contact.html
+++ b/week4/contact.html
@@ -64,6 +64,7 @@
                         <label class="top">Last Name* <input type="text" name="lname" required></label>
                         <label class="top">Contact Number* <input type="tel" name="phone" placeholder="1235551234" required></label>
                         <label class="top">Email Address* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
+                        <label>Inquiry</label>
                         <textarea id="story2" name="story" rows="5" cols="33">Inquiry Details...</textarea>
                     </fieldset>
                     <input type="submit" value="Submit Inquiry" class="submitBtn">
