--- a/week4/join.html
+++ b/week4/join.html
@@ -73,6 +73,7 @@
                 </fieldset>
                 <fieldset>
                     <legend>Business Description</legend>
+                    <label>Description</label>
                     <textarea id="story" name="story" rows="5" cols="33">briefly describe your business...</textarea>
                 </fieldset>
                 <input id="join-date" type="hidden">
