--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li>Lesson 09.5: <a href="./week9/prophets.html" target="_blank">Prophets Card Page</a></li>
             <li>Lesson 10: <a href="./week4/index.html" target="_blank">Using the Weather API</a></li>
             <li>Lesson 11: <a href="./week4/index.html" target="_blank">Chamber of Commerce Submission</a></li>
+            <li>Lesson 12: <a href="./finalproject/index.com" target="_blank">Final Project</a></li>
         </ul>
         <hr>
     </section>
