service, reservation, and thanks page.

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -36,13 +36,18 @@
         <section class="homepage">
         <section class="main-sec-1">
             <img id ="main-sec-grid-1" src="images/placeholder.jpg">
-            <p id="main-sec-grid-2">Welcome to Salon Ryann Rose, Virginia's greatest mobile hair salon. Mrs. Rose has been cutting, coloring,
-                and styling hair since 2001, but didn't start her own business until 2012. 
+            <p id="main-sec-grid-2">Welcome to Salon Ryann Rose, Virginia's greatest mobile hair salon. Ryann has been cutting, coloring,
+                and styling hair in YOUR homes since 2012. An expert in all things related to hair, she has been a licensed and trained professional
+                for 21 years now.
             </p>
-            <p id="main-sec-grid-3">Once her one-woman business was created, she became very busy! Traveling around town and meeting the 
-                                    needs of all her clients is her speciality, and has left every client feeling satisfied.
+            <p id="main-sec-grid-3">Once her one-woman mobile business was created, she became very busy. Traveling around town and meeting the 
+                                    individual needs of the clients is her speciality, and she has definetly made her mark in Chesterfield County and beyond.
             </p>
             <button id="main-sec-grid-4"> Reserve NOW!</button>
+        </section>
+        <section class="main-java">
+            <p>Is the salon open right now?</p>
+            <div class="javamainpage"></div>
         </section>
         <section class="main-sec-2">
             <h2>Summary</h2>
@@ -137,32 +142,35 @@
         </tr>
       </table>
       <!-- Codes by Quackit.com -->
-
-      <img class="table-img" src="images/momwithkid.jpg" alt="Ryann cutting hair">
-      <img class="table-img2" src="images/momwithhsm.jpg" alt="Ryann with HSM teacher">
-
         </section>
+        <!--<section class="images-at-end">-->
+            <img class="table-img" src="images/momwithkid.jpg" alt="Ryann cutting hair">
+            <img class="table-img2" src="images/momwithhsm.jpg" alt="Ryann with HSM teacher">
+        <!--</section>-->
     </section>
     </main>
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
                 <img id="footer-logo" src="images/placeholder.jpg">
-                <p class="footer-text">random words ....?</p>
-                <p class="footer-text">idk yet!!! ahhhhhh</p>
-                <p class="footer-text">so much for planning</p>
-                <p class="footer-text">W is for wumbo, i wombo</p>
+                <p class="footer-text">Website created by Eleanor Barnum 
+                WDD 230 Final Project.
+                The site was built with all
+                original HTML, JS, and CSS code.</p>
+
+
             </section>
             <section class="footer-part-2">
                 <h2 class="footer-h2">Location</h2>
                 <a class="footer-link" href="https://googlemaps.com">Google map locaiton</a>
-                <img id="footer-map" src="images/placeholder.jpg">
+                <img id="footer-map" src="images/footer-map.png">
             </section>
             <section class="footer-part-3">
                 <h2 class="footer-h2">Contact Info</h2>
-                <p class="footer-text">blah blah blah</p>
-                <p class="footer-text">blah blah blah</p>
-                <p class="footer-text">blah blah blah</p>
+                <p class="footer-text">Eleanor Barnum can be contacted at 
+                                        barnum.eleanor@gmail.com.
+                                        If you're looking to contact Ryann, 
+                                        Her information is on the "contact" page.</p>
                 <a class="footer-link2" href="https://googlemaps.com">Resource Page...</a>
             </section>
         </div>
