--- a/finalproject/reservations.html
+++ b/finalproject/reservations.html
@@ -31,16 +31,19 @@
             <section class="main-img">
                 <img id="header-img" src="images/headerimg.jpg">
             </section>
+            <section class="service-1">
+                <h2>Reserve an appointment</h2>
+            </section>
             <section class="reserve-form">
                 <div class="field-area">
-                    <h2>Reserve an appointment</h2>
                     <form method="get" action="thankyou.html">
                         <fieldset>
                             <legend>Contact Information</legend>
                             <label class="top">First Name* <input type="text" name="fname" required></label>
                             <label class="top">Last Name* <input type="text" name="lname" required></label>
-                            <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required></label>
+                            <label class="top">Phone* <input type="tel" name="phone" placeholder="(123) 555-1234" required></label>
                         </fieldset>
+                        <
                         <fieldset>
                             <legend>When was the last time you went to a hair salon?</legend>
                             <label class="sbs"><input type="radio" name="salonInfo" value="never">Never</label>
@@ -60,7 +63,7 @@
                             <label class="sbs"><input type="radio" name="services" value="yes">Yes</label>
                             <label class="sbs"><input type="radio" name="services" value="no">No</label>
                         </fieldset>
-                        <input type="submit" value="Reserve NOW!" id="main-sec-grid-4">
+                        <input type="submit" value="Reserve NOW!" id="service-btn">
                     </form>
                 </div>
             </section>
