--- a/finalproject/services.html
+++ b/finalproject/services.html
@@ -32,24 +32,26 @@
                 <img id="header-img" src="images/headerimg.jpg">
             </section>
 
-            <section class="services-main">
+            
                 <section class="service-1">
                     <h2>Services</h2>
                     <p>Salon Ryann Rose offers many different hair services to fit the needs of any request.</p>
                 </section>
-                <section class="service-2">
-                    <h3>Olaplex Treatment</h3>
-                    <p>Stand alone treatment --- $50.00</p>
-                    <p>With color service --- $30.00</p>
-                    <img class="footer-logo" src="images/placeholder.jpg">
-                </section>
+                <section class="services-main">
+                    <section class="service-6">
+                        <h3>Color</h3>
+                        <p>Full --- $130.00</p>
+                        <p>Regrowth (Under 1 inch) --- $65.00</p>
+                        <p>Regrowth (Over 1 inch) --- $80.00</p>
+                        <img class="service-img" src="images/services4.png">
+                    </section>
                 <section class="service-3">
                     <h3>Cuts</h3>
                     <p>Cuts come with wash, cut, and blowdry<br> (Minimum age is 10)</p>
                     <p>With color --- $40.00</p>
                     <p>Without color --- $50.00</p>
                     <p>Mens clipper cut --- $30.00</p>
-                    <img class="footer-logo" src="images/placeholder.jpg">
+                    <img class="service-img" src="images/services1.png">
                 </section>
                 <section class="service-4">
                     <h3>Highlights</h3>
@@ -57,31 +59,30 @@
                     <p>Partial --- $75.00</p>
                     <p>Full --- $120.00</p>
                     <p>Full with II --- $150.00</p>
-                    <img class="footer-logo" src="images/placeholder.jpg">
-                </section>
-                <section class="service-5">
-                    <h3>Toner</h3>
-                    <p>Partial --- $20.00</p>
-                    <p>Full --- $30.00</p>
-                    <img class="footer-logo" src="images/placeholder.jpg">
-                </section>
-                <section class="service-6">
-                    <h3>Color</h3>
-                    <p>Full --- $130.00</p>
-                    <p>Regrowth (Under 1 inch) --- $65.00</p>
-                    <p>Regrowth (Over 1 inch) --- $80.00</p>
-                    <img class="footer-logo" src="images/placeholder.jpg">
+                    <img class="service-img" src="images/services2.png">
                 </section>
                 <section class="service-7">
                     <h3>Packages</h3>
                     <p>Root touch up, mini highlight, and either a cut OR Olaplex treatment --- $150.00</p>
                     <p>Olaplex treatment with cut --- $90.00</p>
-                    <img class="footer-logo" src="images/placeholder.jpg">
+                    <img class="service-img" src="images/services6.png">
+                </section>
+                <section class="service-2">
+                    <h3>Olaplex Treatment</h3>
+                    <p>Stand alone treatment --- $50.00</p>
+                    <p>With color service --- $30.00</p>
+                    <img class="service-img" src="images/services5.png">
+                </section>
+                <section class="service-5">
+                    <h3>Toner</h3>
+                    <p>Partial --- $20.00</p>
+                    <p>Full --- $30.00</p>
+                    <img class="service-img" src="images/services3.png">
                 </section>
                 <section class="service-8">
                     <h3>EXTRA CHARGE FOR EXTREMELY LONG OR THICK HAIR (Requiring extra color or blow dry time)</h3>
                     <p>Ready to go? Click the button to make your reservation now!</p>
-                    <button id="main-sec-grid-4"> Reserve NOW!</button>
+                    <button id="service-btn"> Reserve NOW!</button>
                 </section>
             </section>
 
