--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -31,12 +31,24 @@
             <section class="main-img">
                 <img id="header-img" src="images/headerimg.jpg">
             </section>
-            <section class="service-1">
-                <h2>Thank you for making an appointment!</h2>
-                <p>Now that you've submitted your information, Ryann will be in touch shortly.</p>
-            </section>
-            <section class="thankusection">
-            <img id="thanku" src="images/thanku.jpg" alt="Ryann taking a selfie in a salon">
+            <section class="contact-form">
+                <div class="field-area">
+                    <h2>Contact Ryann</h2>
+                    <p>Questions, concerns or comments? Give us your information and Ryann will get back to you as soon as possible.</p>
+                    <form method="get" action="thankyou.html">
+                        <fieldset>
+                            <legend>Contact Information</legend>
+                            <label class="top">First Name* <input type="text" name="fname" required></label>
+                            <label class="top">Last Name* <input type="text" name="lname" required></label>
+                            <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required></label>
+                        </fieldset>
+                        <fieldset>
+                            <legend>What are you reaching out for?</legend>
+                            <label class="textarea"><textarea id="story" name="story" rows="5" cols="33"></textarea></label>
+                        </fieldset>
+                        <input type="submit" value="Get in contact" id="main-sec-grid-4">
+                    </form>
+                </div>
             </section>
         </main>
     </body>
