--- a/finalproject/faq.html
+++ b/finalproject/faq.html
@@ -31,12 +31,22 @@
             <section class="main-img">
                 <img id="header-img" src="images/headerimg.jpg">
             </section>
-            <section class="service-1">
-                <h2>Thank you for making an appointment!</h2>
-                <p>Now that you've submitted your information, Ryann will be in touch shortly.</p>
-            </section>
-            <section class="thankusection">
-            <img id="thanku" src="images/thanku.jpg" alt="Ryann taking a selfie in a salon">
+            <section class="faq-main">
+                <h2>Frequently Asked Questions</h2>
+                <p>Curious about something? Chances are, your question has already been asked.</p>
+                <h3>Do I need to have anything ready before the appointment?</h3>
+                <p>No. Ryann will bring everything needed including towels, products, and anything else. The only thing to worry about is having a chair set up for you to sit in.</p>
+                <h3>Are you licensed to do this?</h3>
+                <p>Ryann has been a lisenced professional for 21 years. Some states require special licensing to provide
+                    mobile services, but Virginia does not. Ryann has a business license and that is all that is required.</p>
+                <h3>How do you wash the color out of my hair?</h3>
+                <p>All hair is washed in the sink using a spray nozzle. Old school style, the way your grandma used to wash her hair as a kid… In the kitchen sink! It’s affective and fast.</p>
+                <h3>How do I know your tools are sanitized between each client?</h3>
+                <p>I bring sanitizer solution to your home and sanitize each implement in front of you before I use it. Each client gets a fresh set of towels and a cape. I do not reuse these on clients, they all get washed at the end of the day.</p>
+                <h3> How do you take payment?</h3>
+                <p>I accept PayPal, Venmo, Zell, Apple Pay, cash or check.</p>
+                <h3>Will you come to my house for any service?</h3>
+                <p>I have a $50 minimun per visit.</p>
             </section>
         </main>
     </body>
