contact, faq, gallery, and review page

--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -31,10 +31,12 @@
             <section class="main-img">
                 <img id="header-img" src="images/headerimg.jpg">
             </section>
+            <section class="service-1">
+                <h2>Contact Ryann</h2>
+                <p>Questions, concerns or comments? Give us your information and Ryann will get back to you as soon as possible.</p>
+            </section>
             <section class="contact-form">
                 <div class="field-area">
-                    <h2>Contact Ryann</h2>
-                    <p>Questions, concerns or comments? Give us your information and Ryann will get back to you as soon as possible.</p>
                     <form method="get" action="thankyou.html">
                         <fieldset>
                             <legend>Contact Information</legend>
