--- a/finalproject/faq.html
+++ b/finalproject/faq.html
@@ -31,9 +31,11 @@
             <section class="main-img">
                 <img id="header-img" src="images/headerimg.jpg">
             </section>
-            <section class="faq-main">
+            <section class="service-1">
                 <h2>Frequently Asked Questions</h2>
                 <p>Curious about something? Chances are, your question has already been asked.</p>
+            </section>
+            <section class="faq-main">
                 <h3>Do I need to have anything ready before the appointment?</h3>
                 <p>No. Ryann will bring everything needed including towels, products, and anything else. The only thing to worry about is having a chair set up for you to sit in.</p>
                 <h3>Are you licensed to do this?</h3>
