--- a/finalproject/gallery.html
+++ b/finalproject/gallery.html
@@ -28,9 +28,13 @@
             </div>
         </header>
         <main>
-
-            <div class="gallery">
+            <section class="main-img">
+                <img id="header-img" src="images/headerimg.jpg">
+            </section>
+            <section class="service-1">
                 <h2>Image Gallery</h2>
+            </section>
+            <div class="gallery">
                 <div class="pictures"></div>
             </div>
 
