--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -14,14 +14,15 @@
     <body>
         <header>
             <div class="header-grid">
-                <img id="header-logo" src="images/placeholder.jpg">
+                <img id="header-logo" src="images/translogo.png" alt="logo image">
                 <nav>
                    <button id="nav-btn">&#9776;</button>
                     <ul id="navbar">
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="./services.html">Services</a></li>
                         <li><a href="./reservations.html">Reservations</a></li>
                         <li><a href="./gallery.html">Gallery</a></li>
-                        <li><a href="./contact.html">Contact Us</a></li>
+                        <li><a href="./reviews.html">Reviews</a></li>
                         <li><a href="./faq.html">FAQ</a></li>
                     </ul>
                 </nav>
@@ -57,23 +58,25 @@
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
-                <img id="footer-logo" src="images/placeholder.jpg">
-                <p class="footer-text">random words ....?</p>
-                <p class="footer-text">idk yet!!! ahhhhhh</p>
-                <p class="footer-text">so much for planning</p>
-                <p class="footer-text">W is for wumbo, i wombo</p>
+                <img id="footer-logo" src="images/translogo.png" alt="logo image">
+                <p class="footer-text">This website was created by Eleanor Barnum 
+                for her WDD 230 Final Project.
+                The site was built with all
+                original HTML, JS, and CSS code and took approx. two weeks to complete.</p>
+
+
             </section>
             <section class="footer-part-2">
                 <h2 class="footer-h2">Location</h2>
-                <a class="footer-link" href="https://googlemaps.com">Google map locaiton</a>
-                <img id="footer-map" src="images/placeholder.jpg">
+                <button class="footer-link" href="https://googlemaps.com">Google map locaiton</button>
+                <img id="footer-map" src="images/footer-map.png">
             </section>
             <section class="footer-part-3">
-                <h2 class="footer-h2">Contact Info</h2>
-                <p class="footer-text">blah blah blah</p>
-                <p class="footer-text">blah blah blah</p>
-                <p class="footer-text">blah blah blah</p>
-                <a class="footer-link2" href="https://googlemaps.com">Resource Page...</a>
+                <h2 class="footer-h2">Contact Information</h2>
+                <p class="footer-text">Eleanor Barnum can be contacted at barnum.eleanor@gmail.com.
+                                        If you're interested in connecting with Ryann, 
+                                        her information is on the "contact" page.</p>
+                <button class="footer-link2" href="./contact.html">Contact NOW!</button>
             </section>
         </div>
     </footer>
