--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="header-grid">
-            <img id="header-logo" src="images/placeholder.jpg">
+            <img id="header-logo" src="images/translogo.png" alt="logo image">
             <nav>
                <button id="nav-btn">&#9776;</button>
                 <ul id="navbar">
@@ -36,15 +36,18 @@
         </section>
         <section class="homepage">
         <section class="main-sec-1">
-            <img id ="main-sec-grid-1" src="images/placeholder.jpg">
+            <img id ="main-sec-grid-1" src="images/clippersimg.png" alt="a pair of hair clippers">
             <p id="main-sec-grid-2">Welcome to Salon Ryann Rose, Virginia's greatest mobile hair salon. Ryann has been cutting, coloring,
                 and styling hair in YOUR homes since 2012. An expert in all things related to hair, she has been a licensed and trained professional
-                for 21 years now.
+                for 21 years.
             </p>
             <p id="main-sec-grid-3">Once her one-woman mobile business was created, she became very busy. Traveling around town and meeting the 
-                                    individual needs of the clients is her speciality, and she has definetly made her mark in Chesterfield County and beyond.
+                                    individual needs of clients is her speciality, and she has definetly made her mark in Chesterfield County and beyond.
+                                    Book today!
             </p>
+            <a href="./reservations.html">
             <button id="main-sec-grid-4"> Reserve NOW!</button>
+            </a>
         </section>
         <section class="main-java">
             <p>Is the salon open right now?</p>
@@ -153,7 +156,7 @@
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
-                <img id="footer-logo" src="images/placeholder.jpg">
+                <img id="footer-logo" src="images/translogo.png" alt="logo image">
                 <p class="footer-text">This website was created by Eleanor Barnum 
                 for her WDD 230 Final Project.
                 The site was built with all
@@ -163,7 +166,9 @@
             </section>
             <section class="footer-part-2">
                 <h2 class="footer-h2">Location</h2>
+                <a href="https://www.google.com/maps/place/2221+Swamp+Fox+Rd,+Midlothian,+VA+23112/@37.4679912,-77.711943,17z/data=!3m1!4b1!4m5!3m4!1s0x89b17051260cbc6d:0x224fed0ee9b290b!8m2!3d37.467987!4d-77.7077158">
                 <button class="footer-link" href="https://googlemaps.com">Google map locaiton</button>
+                </a>
                 <img id="footer-map" src="images/footer-map.png">
             </section>
             <section class="footer-part-3">
@@ -171,7 +176,9 @@
                 <p class="footer-text">Eleanor Barnum can be contacted at barnum.eleanor@gmail.com.
                                         If you're interested in connecting with Ryann, 
                                         her information is on the "contact" page.</p>
-                <button class="footer-link2" href="./contact.html">Contact NOW!</button>
+                <a href="./contact.html">
+                <button class="footer-link2">Contact NOW!</button>
+                </a>
             </section>
         </div>
     </footer>
