--- a/finalproject/services.html
+++ b/finalproject/services.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
+    <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
@@ -14,7 +15,7 @@
     <body>
         <header>
             <div class="header-grid">
-                <img id="header-logo" src="images/translogo.png" alt="logo image">
+                <img id="header-logo" src="images/translogo.webp" alt="logo image">
                 <nav>
                    <button id="nav-btn">&#9776;</button>
                     <ul id="navbar">
@@ -30,7 +31,7 @@
         </header>
         <main>
             <section class="main-img">
-                <img id="header-img" src="images/headerimg.jpg">
+                <img id="header-imgBROKEN" src="images/headerimg5.jpg">
             </section>
 
             
@@ -44,6 +45,7 @@
                         <p>Full --- $130.00</p>
                         <p>Regrowth (Under 1 inch) --- $65.00</p>
                         <p>Regrowth (Over 1 inch) --- $80.00</p>
+                        <br><br><br><br><br>
                         <img class="service-img" src="images/services4.png">
                     </section>
                 <section class="service-3">
@@ -72,16 +74,18 @@
                     <h3>Olaplex Treatment</h3>
                     <p>Stand alone treatment --- $50.00</p>
                     <p>With color service --- $30.00</p>
+                    <br><br><br><br><br>
                     <img class="service-img" src="images/services5.png">
                 </section>
                 <section class="service-5">
                     <h3>Toner</h3>
                     <p>Partial --- $20.00</p>
                     <p>Full --- $30.00</p>
+                    <br><br><br>
                     <img class="service-img" src="images/services3.png">
                 </section>
                 <section class="service-8">
-                    <h3>EXTRA CHARGE FOR EXTREMELY LONG OR THICK HAIR (Requiring extra color or blow dry time)</h3>
+                    <h3>EXTRA CHARGE FOR EXTREMELY LONG OR THICK HAIR <br>(Requiring extra color or blow dry time)</h3>
                     <p>Ready to go? Click the button to make your reservation now!</p>
                     <a href="./reservations.html">
                     <button id="service-btn"> Reserve NOW!</button>
@@ -96,7 +100,7 @@
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
-                <img id="footer-logo" src="images/translogo.png" alt="logo image">
+                <img id="footer-logo" src="images/translogo.webp" alt="logo image">
                 <p class="footer-text">This website was created by Eleanor Barnum 
                 for her WDD 230 Final Project.
                 The site was built with all
@@ -106,15 +110,19 @@
             </section>
             <section class="footer-part-2">
                 <h2 class="footer-h2">Location</h2>
+                <a href="https://www.google.com/maps/place/2221+Swamp+Fox+Rd,+Midlothian,+VA+23112/@37.4679912,-77.711943,17z/data=!3m1!4b1!4m5!3m4!1s0x89b17051260cbc6d:0x224fed0ee9b290b!8m2!3d37.467987!4d-77.7077158">
                 <button class="footer-link" href="https://googlemaps.com">Google map locaiton</button>
-                <img id="footer-map" src="images/footer-map.png">
+                </a>
+                <img id="footer-map" src="images/footer-map.png" alt="map of Ryann's address">
             </section>
             <section class="footer-part-3">
                 <h2 class="footer-h2">Contact Information</h2>
                 <p class="footer-text">Eleanor Barnum can be contacted at barnum.eleanor@gmail.com.
                                         If you're interested in connecting with Ryann, 
                                         her information is on the "contact" page.</p>
-                <button class="footer-link2" href="./contact.html">Contact NOW!</button>
+                <a href="./contact.html">
+                <button class="footer-link2">Contact NOW!</button>
+                </a>
             </section>
         </div>
     </footer>
