--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
+    <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
@@ -14,7 +15,7 @@
     <body>
         <header>
             <div class="header-grid">
-                <img id="header-logo" src="images/translogo.png" alt="logo image">
+                <img id="header-logo" src="images/translogo.webp" alt="logo image">
                 <nav>
                    <button id="nav-btn">&#9776;</button>
                     <ul id="navbar">
@@ -58,7 +59,7 @@
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
-                <img id="footer-logo" src="images/translogo.png" alt="logo image">
+                <img id="footer-logo" src="images/translogo.webp" alt="logo image">
                 <p class="footer-text">This website was created by Eleanor Barnum 
                 for her WDD 230 Final Project.
                 The site was built with all
@@ -68,15 +69,19 @@
             </section>
             <section class="footer-part-2">
                 <h2 class="footer-h2">Location</h2>
+                <a href="https://www.google.com/maps/place/2221+Swamp+Fox+Rd,+Midlothian,+VA+23112/@37.4679912,-77.711943,17z/data=!3m1!4b1!4m5!3m4!1s0x89b17051260cbc6d:0x224fed0ee9b290b!8m2!3d37.467987!4d-77.7077158">
                 <button class="footer-link" href="https://googlemaps.com">Google map locaiton</button>
-                <img id="footer-map" src="images/footer-map.png">
+                </a>
+                <img id="footer-map" src="images/footer-map.png" alt="map of Ryann's address">
             </section>
             <section class="footer-part-3">
                 <h2 class="footer-h2">Contact Information</h2>
                 <p class="footer-text">Eleanor Barnum can be contacted at barnum.eleanor@gmail.com.
                                         If you're interested in connecting with Ryann, 
                                         her information is on the "contact" page.</p>
-                <button class="footer-link2" href="./contact.html">Contact NOW!</button>
+                <a href="./contact.html">
+                <button class="footer-link2">Contact NOW!</button>
+                </a>
             </section>
         </div>
     </footer>
