--- a/finalproject/faq.html
+++ b/finalproject/faq.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
+    <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
@@ -14,7 +15,7 @@
     <body>
         <header>
             <div class="header-grid">
-                <img id="header-logo" src="images/translogo.png" alt="logo image">
+                <img id="header-logo" src="images/translogo.webp" alt="logo image">
                 <nav>
                    <button id="nav-btn">&#9776;</button>
                     <ul id="navbar">
@@ -30,22 +31,22 @@
         </header>
         <main>
             <section class="main-img">
-                <img id="header-img" src="images/headerimg.jpg">
+                <img id="header-imgBROKEN" src="images/headerimg9.jpg">
             </section>
             <section class="service-1">
                 <h2>Frequently Asked Questions</h2>
-                <p>Curious about something? Chances are, your question has already been asked.</p>
+                <p>Curious about something? Chances are, your question has already been asked.<br>
+                All questions answered by Ryann herself.</p>
             </section>
             <section class="faq-main">
                 <h3>Do I need to have anything ready before the appointment?</h3>
-                <p>No. Ryann will bring everything needed including towels, products, and anything else. The only thing to worry about is having a chair set up for you to sit in.</p>
+                <p>No. I bring everything needed including products, towels, and everything else. The only thing I need from you is a chair for you to sit in.</p>
                 <h3>Are you licensed to do this?</h3>
-                <p>Ryann has been a lisenced professional for 21 years. Some states require special licensing to provide
-                    mobile services, but Virginia does not. Ryann has a business license and that is all that is required.</p>
+                <p>Yes. I have been licensed to do hair for 21 years. Some states require special licensing to provide mobile services but Virginia does not. I have a business license and that is all that is required.</p>
                 <h3>How do you wash the color out of my hair?</h3>
-                <p>All hair is washed in the sink using a spray nozzle. Old school style, the way your grandma used to wash her hair as a kid… In the kitchen sink! It’s affective and fast.</p>
+                <p>all hair is washed in the sink using a spray nozzle. Old school style, the way your grandma used to wash her hair as a kid… In the kitchen sink! It’s affective and fast.</p>
                 <h3>How do I know your tools are sanitized between each client?</h3>
-                <p>I bring sanitizer solution to your home and sanitize each implement in front of you before I use it. Each client gets a fresh set of towels and a cape. I do not reuse these on clients, they all get washed at the end of the day.</p>
+                <p>I bring sanitizer solution to your home and sanitize each implement in front of you before I use it. Each client gets a fresh set of towels and a cake. I do not reuse these on clients, they all get washed at the end of the day.</p>
                 <h3> How do you take payment?</h3>
                 <p>I accept PayPal, Venmo, Zell, Apple Pay, cash or check.</p>
                 <h3>Will you come to my house for any service?</h3>
@@ -56,7 +57,7 @@
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
-                <img id="footer-logo" src="images/translogo.png" alt="logo image">
+                <img id="footer-logo" src="images/translogo.webp" alt="logo image">
                 <p class="footer-text">This website was created by Eleanor Barnum 
                 for her WDD 230 Final Project.
                 The site was built with all
@@ -66,7 +67,9 @@
             </section>
             <section class="footer-part-2">
                 <h2 class="footer-h2">Location</h2>
-                <button class="footer-link" href="https://googlemaps.com">Google map locaiton</button>
+                <a href="https://www.google.com/maps/place/2221+Swamp+Fox+Rd,+Midlothian,+VA+23112/@37.4679912,-77.711943,17z/data=!3m1!4b1!4m5!3m4!1s0x89b17051260cbc6d:0x224fed0ee9b290b!8m2!3d37.467987!4d-77.7077158">
+                <button class="footer-link" href="https://googlemaps.com" alt="map of Ryann's address">Google map locaiton</button>
+                </a>
                 <img id="footer-map" src="images/footer-map.png">
             </section>
             <section class="footer-part-3">
@@ -74,7 +77,9 @@
                 <p class="footer-text">Eleanor Barnum can be contacted at barnum.eleanor@gmail.com.
                                         If you're interested in connecting with Ryann, 
                                         her information is on the "contact" page.</p>
-                <button class="footer-link2" href="./contact.html">Contact NOW!</button>
+                <a href="./contact.html">
+                <button class="footer-link2">Contact NOW!</button>
+                </a>
             </section>
         </div>
     </footer>
