--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
+    <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
@@ -16,7 +17,7 @@
 <body>
     <header>
         <div class="header-grid">
-            <img id="header-logo" src="images/translogo.png" alt="logo image">
+            <img id="header-logo" src="images/translogo.webp" alt="logo image">
             <nav>
                <button id="nav-btn">&#9776;</button>
                 <ul id="navbar">
@@ -52,6 +53,7 @@
         <section class="main-java">
             <p>Is the salon open right now?</p>
             <div class="javamainpage"></div>
+            <p id="localStorage"></p>
         </section>
         <section class="main-sec-2">
             <h2>Summary</h2>
@@ -156,7 +158,7 @@
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
-                <img id="footer-logo" src="images/translogo.png" alt="logo image">
+                <img id="footer-logo" src="images/translogo.webp" alt="logo image">
                 <p class="footer-text">This website was created by Eleanor Barnum 
                 for her WDD 230 Final Project.
                 The site was built with all
