--- a/finalproject/faq.html
+++ b/finalproject/faq.html
@@ -44,13 +44,13 @@
                 <h3>Are you licensed to do this?</h3>
                 <p>Yes. I have been licensed to do hair for 21 years. Some states require special licensing to provide mobile services but Virginia does not. I have a business license and that is all that is required.</p>
                 <h3>How do you wash the color out of my hair?</h3>
-                <p>all hair is washed in the sink using a spray nozzle. Old school style, the way your grandma used to wash her hair as a kid… In the kitchen sink! It’s affective and fast.</p>
+                <p>All hair is washed in the sink using a spray nozzle. Old school style, the way your grandma used to wash her hair as a kid… In the kitchen sink! It’s effective and fast.</p>
                 <h3>How do I know your tools are sanitized between each client?</h3>
                 <p>I bring sanitizer solution to your home and sanitize each implement in front of you before I use it. Each client gets a fresh set of towels and a cake. I do not reuse these on clients, they all get washed at the end of the day.</p>
                 <h3> How do you take payment?</h3>
                 <p>I accept PayPal, Venmo, Zell, Apple Pay, cash or check.</p>
                 <h3>Will you come to my house for any service?</h3>
-                <p>I have a $50 minimun per visit.</p>
+                <p>I have a $50 minimum per visit.</p>
             </section>
         </main>
     </body>
