--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -43,7 +43,7 @@
                 for 21 years.
             </p>
             <p id="main-sec-grid-3">Once her one-woman mobile business was created, she became very busy. Traveling around town and meeting the 
-                                    individual needs of clients is her speciality, and she has definetly made her mark in Chesterfield County and beyond.
+                                    individual needs of clients is her specialty, and she has definitely made her mark in Chesterfield County and beyond.
                                     Book today!
             </p>
             <a href="./reservations.html">
@@ -57,32 +57,35 @@
         </section>
         <section class="main-sec-2">
             <h2>Summary</h2>
-            <p>Once her one-woman business was created, she became very busy! Traveling around town and meeting the 
-                needs of all her clients is her speciality, and has left every client feeling satisfied.
-                Once her one-woman business was created, she became very busy! Traveling around town and meeting the 
-                needs of all her clients is her speciality, and has left every client feeling satisfied.
-                Once her one-woman business was created, she became very busy! Traveling around town and meeting the 
-                needs of all her clients is her speciality, and has left every client feeling satisfied.
-                Once her one-woman business was created, she became very busy! Traveling around town and meeting the 
-                needs of all her clients is her speciality, and has left every client feeling satisfied.</p>
+            <p>Hello, my name is Ryann and I am the owner of Salon Ryann Rose. My salon is mobile, and is the first of its kind in Virginia. 
+                But what exactly does a “mobile salon” mean? It means that I’ll come to YOU on YOUR time. If you’re located in the Chesterfield 
+                County area, book an appointment now and I’ll drive to wherever you are. Everything I need is in the trunk of my car, and once 
+                I set up my supplies wherever you see fit, It’ll be just like the real deal. My mobile salon helps to facilitate a salon
+                 experience for those who have a hard time leaving their home due to illness, childcare problems, or any other reason. 
+                 Everyone deserves to feel beautiful, and I love giving everybody a chance to have that experience. <br><br>
+
+                I have been doing hair in various capacities for 21 years and have extensive experience in both color and cutting. 
+                I am a Paul Mitchel hair school graduate, licensed in the state of Virginia, and am also a certified <a href="https://headshapematters.com/" target="_blank">HSM</a> cosmetologist
+                 and teacher. I look forward to working with you!
+                </p>
         </section>
         <section class="main-sec-3">
-            <a href="https://www.facebook.com/SalonRyannRose">
+            <a href="https://www.facebook.com/SalonRyannRose" target="_blank">
                 <img class="social-media-links" src="images/facebook.png" alt="facebook icon">
             </a>
-            <a href="https://www.instagram.com/salonryannrose/">
+            <a href="https://www.instagram.com/salonryannrose/" target="_blank">
                 <img class="social-media-links" src="images/instagram.png" alt="instagram icon">
             </a>
-            <a href="https://www.pinterest.com/">
+            <a href="https://www.pinterest.com/ryroba/" target="_blank">
                 <img class="social-media-links" src="images/pinterest.png" alt="pinterest icon">
             </a>
-            <a href="https://www.linkedin.com/">
+            <a href="https://www.linkedin.com/in/ryann-barnum-974a761a3/" target="_blank">
                 <img class="social-media-links" src="images/linkedin.png" alt="linkedin icon">
             </a>
-            <a href="https://www.twitter.com/">
+            <a href="https://www.twitter.com/" target="_blank">
                 <img class="social-media-links" src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://www.youtube.com/">
+            <a href="https://www.youtube.com/channel/UC4Nyjb8IRu9I-UDhIGxlN-g/featured" target="_blank">
                 <img class="social-media-links" src="images/youtube.png" alt="youtube icon">
             </a>
         </section>
